# flats_bot

./: .gitignore  Cargo.toml  log4rs.yaml
src/: lib.rs  logger.rs  main.rs
src/asynchronous/tokio/: runtime.rs
src/flats/: mod.rs
src/telegram/: mod.rs
