[package]
authors = ["Daniils Firgers <dfirger@gmail.com>"]
edition = "2021"
name = "flats-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.19"
dotenv = "0.15.0"
log = "0.4.14"
log4rs = "1.3.0"
reqwest = {version = "0.12.5", features = ["json", "blocking"]}
scraper = "0.19.0"
teloxide = {version = "0.12.2", features = ["macros"]}
tokio = {version = "1.37.0", features = ["full"]}
